Fixed bottom cutoff and re-implemented search and filtering

--- a/src/client/src/Card_Grid/Card_Grid.css
+++ b/src/client/src/Card_Grid/Card_Grid.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
+    margin-top: calc(8vh + 10px);
+    margin-bottom: 8vh;
     /* NOTE: This assumes the max width of a card is 400px */
-    max-height: calc(4 * 400px + 3 * 1em);
+    /*max-height: calc(4 * 400px + 3 * 1em);*/
     max-width: 400px / 100vw;
     padding: 10px;
+    height: auto;
 }
