--- a/src/client/src/Header/Header.css
+++ b/src/client/src/Header/Header.css
@@ -12,7 +12,7 @@
     align-items: center;
     display: flex;
     flex-direction: row;
-    position: sticky;
+    position: fixed;
     top: 0;
     justify-content: space-between
 }
@@ -167,7 +167,7 @@ textarea {
   padding-left: 33%;
 }
 
-input[type="search"]::-webkit-search-cancel-button {
+input[type="searchBox"]::-webkit-search-cancel-button {
     -webkit-appearance: none;
     height: 25px;
     width: 20px;
